--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
     "react-typical": "^0.1.3",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
